# rustflix

./: .gitignore  Cargo.toml  \
src/: args.rs  main.rs  utilities.rs
src/args/: command_types.rs  entity_types.rs
src/args/command_types/: user_subcommands.rs  video_subcommands.rs  view_subcommands.rs
src/args/entity_types/: user_subcommands.rs  video_subcommands.rs  view_subcommands.rs
