[package]
name = "rustflix"
version = "1.1.0"
edition = "2021"
description = "Rustflix\n──────────\nCreate, edit and get user and video information."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.8", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
